@startuml - UpTrade

title Diagrama de Classes - UpTrade

class Usuario {
  +nome: String
  +email: String
  -senha: String
}

class Carteira {
  -id_carteira: number
  -nome: String
  -dataCriacao: Date
  -valorAtual: number
  +criarCarteira(id_carteira: number): void
  +excluirCarteira(id_carteira: number): void
  +ordenarCarteira(): void
  +nomearCarteira(string nome): void
  +renomearCarteira(string novoNome): void
}

class Meta {
  -idMeta: number
  -nome: String
  -dataCriacao: Date
  -valorAtual: number
  -prazo: Date
  -valorAlmejado: number
  -concluida: boolean
  +criarMeta(): void
  +excluirMeta(): void
  +ordenarMetas(): void
  +nomearMeta(string nome): void
  +renomearMeta(): void
}

class Poupanca {
  -idPoupanca: number
  -nome: String
  -dataCriacao: Date
  -valorAtual: number
  +criarPoupanca(): void
  +excluirPoupanca(): void
  +ordenarPoupanca(): void
  +nomearPoupanca(string nome): void
  +renomearPoupanca(): void
}

class MovimentacaoCarteira {
  -nome: String
  -valor: number
  -dataCriacao: Date
  -modalidade: String
  -tipo: String
  -id_carteira: number 
  +aplicarCapital(number valor): void
  +retirarCapital(number valor): void
  +aplicarCapitalPeriodicamente(number valor, string periodicidade): void
  +retirarCapitalPeriodicamente(number valor, string periodicidade): void
  +excluirTransacoes(): void
  +ordenarTransacoes(): void
  +nomearTransacaoCarteira(string nome): void
  +renomearTransacao(): void
}

class MovimentacaoMeta {
  -valor: number
  -dataCriacao: Date
  -idMeta: number 
  +aplicarCapital(number valor): void
  +retirarCapital(number valor): void
}

class MovimentacaoPoupanca {
  -valor: number
  -dataCriacao: Date
  -idPoupanca: number
  +aplicarCapital(number valor): void
  +retirarCapital(number valor): void
}

' Relacionamentos
Usuario "1" --> "*" Carteira : possui
Carteira "1" --> "*" MovimentacaoCarteira : contém
Usuario "1" --> "*" Meta : define
Meta "1" --> "*" MovimentacaoMeta : movimenta
Usuario "1" --> "*" Poupanca : possui
Poupanca "1" --> "*" MovimentacaoPoupanca : movimenta

@enduml